add-item-requests: добавление тестов и рефакторинг